syntax = "proto3";

package templates.v1;
option go_package = "pkg/templates/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Service {
  rpc Create(CreateRequest) returns (Response);
  rpc GetList(google.protobuf.Empty) returns (AllResponse);
  rpc GetById(GetByIdRequest) returns (Response);
  rpc UpdateById(UpdateRequest) returns (Response);
  rpc DeleteById(GetByIdRequest) returns (Response);
}

message CreateRequest {
  string title = 1;
  string phone = 2;
}

message Response {
  int64 id = 1;
  string title = 2;
  string phone = 3;
  google.protobuf.Timestamp created = 4;
  google.protobuf.Timestamp updated = 5;
}

message AllResponse {
  repeated Response items = 1;
}

message GetByIdRequest {
  int64 id = 1;
}

message UpdateRequest {
  int64 id = 1;
  string title = 2;
  string phone = 3;
}